<resources>
    <string name="app_name">MoonLight</string>
    <string name="msg_bem_vindo" translatable="false">Seja Muito\nBem Vindo</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="msg_Cadastre_se">Não é usuário?\nCadastre-se</string>
    <string name="msg_Ja_e_usuario">Já é usuário? prossiga </string>
    <string name="msg_Base_de_dados"> ERRO </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>