<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF0FC"
    tools:context=".SignupActivity">

  <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background2"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_Cadastre_se"
        android:layout_marginStart="32dp"
        android:textSize="32sp"
        android:textColor="#6672FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/name"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#3B608C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

  <EditText
      android:id="@+id/editTextEmailSing"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginTop="24dp"
      android:background="@drawable/edit_text_background"
      android:drawableStart="@drawable/email"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textPersonName"
      android:textColor="@color/black"
      android:textColorHint="#3B608C"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

  <EditText
      android:id="@+id/editTextPassSing"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="24dp"
      android:layout_marginTop="24dp"
      android:background="@drawable/edit_text_background"
      android:drawableStart="@drawable/password"
      android:drawablePadding="20dp"
      android:ems="10"
      android:hint="@string/senha"
      android:inputType="textPassword"
      android:textColor="@color/black"
      android:textColorHint="#3B608C"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextEmailSing" />

  <ImageView
      android:id="@+id/button_continue_login"
      android:layout_width="57dp"
      android:layout_height="53dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="24dp"
      android:src="@drawable/btn_arraw1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextPassSing" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/msg_Ja_e_usuario"
      android:textColor="#3b608c"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button_continue_login" />

</androidx.constraintlayout.widget.ConstraintLayout>